After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 708857 - Half-maximized CSD apps don't get a drop shadow drawn
Half-maximized CSD apps don't get a drop shadow drawn
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: Other
3.14.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
: 721202 738487 (view as bug list)
Depends on:
Blocks: CSD
 
 
Reported: 2013-09-26 17:42 UTC by John Stowers
Modified: 2014-12-14 03:59 UTC
See Also:
GNOME target: 3.16
GNOME version: ---


Attachments
look at nautilus (207.04 KB, image/png)
2013-09-26 17:42 UTC, John Stowers
  Details
Render shadows for half-tiled windows (1.01 KB, patch)
2014-11-27 14:44 UTC, Matthias Clasen
committed Details | Review

Description John Stowers 2013-09-26 17:42:30 UTC
Created attachment 255861 [details]
look at nautilus

Better explained with a picture (see nautilus)
Comment 1 Matthias Clasen 2013-09-27 03:36:25 UTC
not a shell issue, csd windows have their shadows drawn client-side.
Comment 2 António Fernandes 2013-12-30 11:01:01 UTC
*** Bug 721202 has been marked as a duplicate of this bug. ***
Comment 3 Matthias Clasen 2014-10-14 13:36:14 UTC
*** Bug 738487 has been marked as a duplicate of this bug. ***
Comment 4 Allan Day 2014-11-20 12:39:06 UTC
Highly visible bug - marking as a 3.16 target.
Comment 5 Hashem Nasarat 2014-11-26 16:26:07 UTC
Can we just always draw shadows for half-maximized apps?

It's so weird looking when two half-maximized apps (left and right split) both don't have borders or shadows.
Comment 6 Erick Perez Castellanos 2014-11-27 14:00:00 UTC
According to Allan bug triaging policy it would be good to mark this bug as NEW
Comment 7 Matthias Clasen 2014-11-27 14:44:54 UTC
Created attachment 291656 [details] [review]
Render shadows for half-tiled windows

Without this, side-by-side half-tiled windows are hard to discern.
Comment 8 Matthias Clasen 2014-11-28 04:21:59 UTC
Attachment 291656 [details] pushed as 8753ef6 - Render shadows for half-tiled windows
Comment 9 Atri 2014-12-14 03:59:12 UTC
Hi Mathias!
I took your patch and applied it to gtk+ 3.14.5 (it applies cleanly with very minor changes), but it seems that that leads to bug 741374. Is it because this patch should not be applied against 3.14.x? If so, could we get something for 3.14.x that fixes this issue?

Thanks a lot.